# CbosaEmailSender

./: .env.example  .gitignore  .replit  brevo_service.py  cbosa_bot.py  database.py  file_helpers.py  gpt_5_nano_test.py  main.py  models.py  pyproject.toml  replit.md
attached_assets/: Pasted--html-HEAD-META-NAME-ROBOTS-CONTENT-NOARCHIVE-META-http-equiv-Content-Type-content--1758037924158_1758037924159.txt  ai_judgment_analyzer_1756796136043.py  analyze_cbosa_form_1756796136040.py  app_1756796136040.py  cbosa_scraper_1756796136041.py  date_filter_manager_1756796136041.py  improved_date_filter_1756796136042.py  newsletter_generator_1756796136042.py
cbosa_scraper/: ai_judgment_analyzer.py  attachments.py  bot_runner.py  cbosa_scraper.py  date_filter_manager.py  docx_newsletter.py  newsletter_generator.py
python/: ai_judgment_analyzer.py  bot_runner.py  cbosa_scraper.py  date_filter_manager.py  newsletter_generator.py
templates/: email_body.html
test_files/: gpt_5_nano_test.py
